--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -41,7 +41,7 @@
 								  		</select>
 								  </div>
 								  <div class="form-group input-group">
-									    <span class="input-group-addon">คอลัมน์ที่ใช้คำนวณ</span>
+									    <span class="input-group-addon">คอลัมน์ Balance</span>
 										<select name="column" class="form-control" ng-model="formData.calColumn" ng-options="option.columnName as option.columnName for option in headers | filter:{dataType: 'num'}">
 											<option value="">---กรุณาเลือก---</option>
 								  		</select>
