--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -16,7 +16,7 @@
                 	<div class="col-lg-12">
                	
 		                <div class="well well-sm" style="margin-bottom: 3px;">
-		                    Details 
+		                    งานที่ยังไม่มีการ assign: {{ noOwnerCount }}
 		                </div>
                 	
 						<div class="well well-sm" style="background-color:rgba(51, 122, 183, 0.1);">
