--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -16,23 +16,36 @@
                 	<div class="col-lg-12">
                	
 		                <div class="well well-sm" style="margin-bottom: 3px;">
-		                    งานที่ยังไม่มีการ assign: {{ noOwnerCount }}
+		                                                    งานว่างมี {{ noOwnerCount | number:0 }} เคส
 		                </div>
                 	
 						<div class="well well-sm" style="background-color:rgba(51, 122, 183, 0.1);">
 							<form class="form-inline" ng-submit="test()">
 							
 							  <div class="form-group input-group">
+							   	<span class="input-group-addon"><i class="fa fa-search"></i></span>
+							    <input type="text" class="form-control" placeholder="ค้นหา" ng-model="$parent.formData.userName">
+							  </div>
+							   
+							  <div class="form-group" style="margin-left: 20px;">
+				                <label>{{ headers[0].columnNameAlias || headers[0].columnName }}&nbsp;</label>
+				                <label class="radio-inline">
+				                    <input type="radio" name="userStatus" value="true" ng-model="$parent.formData.enabled">เปิด
+				                </label>
+				                <label class="radio-inline">
+				                    <input type="radio" name="userStatus" value="false" ng-model="$parent.formData.enabled">ปิด
+				                </label>
+		   					  </div>
+							
+							  <!-- <div class="form-group input-group" style="margin-left: 20px;">
 							    <span class="input-group-addon"><i class="fa fa-search"></i></span>
 								<select name="column" class="form-control" ng-model="formData.column" ng-options="option.columnName as option.columnName for option in headers">
 									<option value="">---เลือกคอลัมน์---</option>
 							  	</select>
-							  </div>
+							  </div> -->
 							  
-							  <div class="form-group">
-							    <input type="text" class="form-control" placeholder="{{'user.search.username_hint' | translate}}" ng-model="$parent.formData.userName">
-							  </div>
-							   <button style="margin-left: 20px;" type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">{{'user.search.clear_btn' | translate}}</button>
+							   
+							   <button type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()" style="margin-left: 20px;">{{'user.search.clear_btn' | translate}}</button>
 							   <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
 							   
 							   
@@ -96,7 +109,8 @@
 									<td ng-repeat="h in headers" style="vertical-align: middle;">
 										
 										<div class="btn-group" data-toggle="buttons" ng-show="h.dataType == 'sys_isActive'">
-										  <label class="btn" ng-class="{'btn-primary': data[h.columnName].status, 'btn-danger': !data[h.columnName].status}" ng-click="isActiveClick(data)">
+										  <label class="btn" ng-class="{'btn-primary': data[h.columnName].status, 'btn-danger': !data[h.columnName].status}" ng-click="isActiveClick(data)" 
+										  	     style="padding-left: 5px; padding-right: 5px; padding-top: 0px; padding-bottom: 0px;">
 									    	<i class="fa fa-fw" ng-class="{'fa-check': data[h.columnName].status, 'fa-times': !data[h.columnName].status}"></i>
 										  </label>
 										</div>
