--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -20,20 +20,20 @@
 		                </div>
                 	
 						<div class="well well-sm" style="background-color:rgba(51, 122, 183, 0.1);">
-							<form class="form-inline" ng-submit="test()">
+							<form class="form-inline" ng-submit="search()">
 							
 							  <div class="form-group input-group">
 							   	<span class="input-group-addon"><i class="fa fa-search"></i></span>
-							    <input type="text" class="form-control" placeholder="ค้นหา" ng-model="$parent.formData.userName">
+							    <input type="text" class="form-control" placeholder="ค้นหา" ng-model="formData.keyword">
 							  </div>
 							   
 							  <div class="form-group" style="margin-left: 20px;">
 				                <label>{{ headers[0].columnNameAlias || headers[0].columnName }}&nbsp;</label>
 				                <label class="radio-inline">
-				                    <input type="radio" name="userStatus" value="true" ng-model="$parent.formData.enabled">เปิด
+				                    <input type="radio" name="isActive" value="true" ng-model="formData.isActive">เปิด
 				                </label>
 				                <label class="radio-inline">
-				                    <input type="radio" name="userStatus" value="false" ng-model="$parent.formData.enabled">ปิด
+				                    <input type="radio" name="isActive" value="false" ng-model="formData.isActive">ปิด
 				                </label>
 		   					  </div>
 							
@@ -47,9 +47,6 @@
 							   
 							   <button type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()" style="margin-left: 20px;">{{'user.search.clear_btn' | translate}}</button>
 							   <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
-							   
-							   
-							   
 							   
 							   <div class="pull-right">
 								  <div class="form-group input-group">
