--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -24,7 +24,17 @@
 							
 							  <div class="form-group input-group">
 							   	<span class="input-group-addon"><i class="fa fa-search"></i></span>
-							    <input type="text" class="form-control" placeholder="ค้นหา" ng-model="formData.keyword">
+							    <input type="text" class="form-control" placeholder="ค้นหาด้วยคอลัมน์" ng-model="formData.keyword" ng-show="columnSearchSelected.id == 1">
+							    <select name="column" class="form-control" ng-model="formData.keyword" ng-options="option.username as option.username for option in users" ng-show="columnSearchSelected.id == 2">
+									<option value="">-- ว่าง --</option>
+						  		</select>
+							    
+							    <div class="input-group-btn">
+							        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">{{ columnSearchSelected.colName }} <span class="caret"></span></button>
+							        <ul class="dropdown-menu dropdown-menu-right">
+							          <li ng-repeat="c in columnSearchLst"><a href="" ng-click="searchColumnEvent(c.id)">{{ c.colName }}</a></li>
+							        </ul>
+							    </div>
 							  </div>
 							   
 							  <div class="form-group" style="margin-left: 20px;">
@@ -36,29 +46,23 @@
 				                    <input type="radio" name="isActive" value="false" ng-model="formData.isActive">ปิด
 				                </label>
 		   					  </div>
-							
-							  <!-- <div class="form-group input-group" style="margin-left: 20px;">
-							    <span class="input-group-addon"><i class="fa fa-search"></i></span>
-								<select name="column" class="form-control" ng-model="formData.column" ng-options="option.columnName as option.columnName for option in headers">
-									<option value="">---เลือกคอลัมน์---</option>
-							  	</select>
-							  </div> -->
-							  
-							   
+		   					  
 							   <button type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()" style="margin-left: 20px;">{{'user.search.clear_btn' | translate}}</button>
 							   <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
 							   
 							   <div class="pull-right">
-								  <div class="form-group input-group">
-									    <span class="input-group-addon">วิธีจ่ายงาน</span>
+								  <div class="form-group">
+								  <!-- <div class="form-group input-group"> -->
+									    <!-- <span class="input-group-addon">วิธีจ่ายงาน</span> -->
 										<select name="column" class="form-control" ng-model="formData.methodId" ng-options="option.id as option.methodName for option in assignMethods">
-											<option value="">---กรุณาเลือก---</option>
+											<option value="">-- เลือกวิธีจ่ายงาน --</option>
 								  		</select>
 								  </div>
-								  <div class="form-group input-group">
-									    <span class="input-group-addon">คอลัมน์ Balance</span>
+								  <!-- <div class="form-group input-group"> -->
+								  <div class="form-group">
+									    <!-- <span class="input-group-addon">คอลัมน์ Balance</span> -->
 										<select name="column" class="form-control" ng-model="formData.calColumn" ng-options="option.columnName as option.columnName for option in headers | filter:{dataType: 'num'}" ng-change="changeCalColumnEvent()">
-											<option value="">---กรุณาเลือก---</option>
+											<option value="">-- เลือกคอลัมน์ Balance --</option>
 								  		</select>
 								  </div>
 								  <button type="button" ng-click="showCollector()" class="btn btn-outline btn-primary" ng-disabled="!formData.methodId || !formData.calColumn">ถัดไป</button>
