--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -24,9 +24,9 @@
 							
 							  <div class="form-group input-group">
 							   	<span class="input-group-addon"><i class="fa fa-search"></i></span>
-							    <input type="text" class="form-control" placeholder="ค้นหาด้วยคอลัมน์" ng-model="formData.keyword" ng-show="columnSearchSelected.id == 1">
+							    <input type="text" class="form-control" placeholder="ค้นหาด้วยคอลัมน์" ng-model="formData.keyword" ng-show="columnSearchSelected.id == 1" style="width: 150px;">
 							    <select name="column" class="form-control" ng-model="formData.keyword" ng-options="option.username as option.username for option in users" ng-show="columnSearchSelected.id == 2">
-									<option value="">-- ว่าง --</option>
+									<option value="">-- เคสว่าง --</option>
 						  		</select>
 							    
 							    <div class="input-group-btn">
@@ -35,6 +35,10 @@
 							          <li ng-repeat="c in columnSearchLst"><a href="" ng-click="searchColumnEvent(c.id)">{{ c.colName }}</a></li>
 							        </ul>
 							    </div>
+							  </div>
+							   
+							  <div class="form-group">
+							    <input type="text" class="form-control" placeholder="จำนวนเคส" ng-model="formData.limitedRow" style="width: 100px;">
 							  </div>
 							   
 							  <div class="form-group" style="margin-left: 20px;">
