--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -108,7 +108,8 @@
 									</th>
 								</tr>
 							<thead>
-							<tbody class="noselect">
+							<!-- <tbody class="noselect"> -->
+							<tbody>
 								<tr ng-repeat="data in taskDetails track by $index" ng-class="{'comm-row-selected': data.selected, 'comm-rightclick': data.isRightClick}" ng-mousedown="rowSelect(data, $index, $event)" 
 								    data-context-menu="./views/taskdetail/contextMenu1.html">
 									<td style="vertical-align: middle;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
