--- a/backend/src/main/webapp/app/views/action_code/main.html
+++ b/backend/src/main/webapp/app/views/action_code/main.html
@@ -10,77 +10,64 @@
 			<h1 class="page-header">Action Code</h1>
 		</div>
 	</div>
-	
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="panel panel-primary">
-                <div class="panel-heading">
-                    <i class="fa fa-cog fa-fw"></i> ตั้งค่า Action Code
-                    <div class="btn-group pull-right" ng-if="authority == 'ROLE_SUPERADMIN'">
-			            <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
-			            	<i class="fa fa-chevron-down"></i>
-			            </button>
-			            <ul class="dropdown-menu slidedown">
-			                <li ng-repeat="u in products">
-			                    <a href="" ng-click="changeProduct(u)">{{ u.productName }}</a>
-			                </li>
-			            </ul>
-			        </div>
-			        <span class="pull-right">{{ product.productName }}&nbsp&nbsp</span>
-                </div>
-                <div class="panel-body">
-                
-                	<div class="col-lg-12">
-                		<div class="table-responsive">	
-							<table class="table table-striped table-hover">
-								<thead>
-									<tr>
-										<th style="width: 15%;">ตัวย่อ</th>
-										<th style="width: 30%;">ประโยคเต็ม</th>
-										<th style="width: 30%;">ความหมาย</th>
-										<th style="width: 10%;">สถานะ</th>
-										<th style="width: 15%;"></th>
-									</tr>
-								<thead>
-								<tbody>
-									<tr ng-repeat="item in items">
-										<td style="vertical-align: middle;">
-									        <span editable-text="item.code" e-name="code" e-form="rowform">{{ item.code }}</span>
-								      	</td>
-								      	<td style="vertical-align: middle;">
-									        <span editable-text="item.desc" e-name="desc" e-form="rowform">{{ item.desc }}</span>
-								      	</td>
-								      	<td style="vertical-align: middle;">
-									        <span editable-text="item.meaning" e-name="meaning" e-form="rowform">{{ item.meaning }}</span>
-								      	</td>
-								      	<td style="vertical-align: middle;">
-								      		<span editable-radiolist="item.enabled" e-name="enabled" e-form="rowform" e-ng-options="s.value as s.text for s in statuses">
-												<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="item.enabled"></i>
-												<i class="fa fa-minus-circle fa-lg user-status-disabled-icon" ng-hide="item.enabled"></i>
-									        </span>
-								      	</td>
-								      	<td style="vertical-align: middle;">
-								      		<form editable-form name="rowform" onbeforesave="saveItem($data, item, $index)" ng-show="rowform.$visible" class="form-buttons form-inline" shown="inserted == item">
-			          						  <i class="fa fa-reply fa-lg user-action-icon-primary" ng-disabled="rowform.$waiting" ng-click="item.id != null ? rowform.$cancel() : cancelNewItem(item)" title="ยกเลิก"></i>&nbsp;
-									          <i class="fa fa-floppy-o fa-lg user-action-icon-primary" ng-disabled="rowform.$waiting" onclick="$(this.parentElement).submit()" title="บันทึก"></i>
-									        </form>
-									        <div class="buttons" ng-show="!rowform.$visible">
-			          						  <i class="fa fa-times fa-lg user-action-icon-danger" ng-click="removeItem($index, item.id)" title="ลบ"></i>&nbsp;
-									          <i class="fa fa-pencil-square-o fa-lg user-action-icon-primary" ng-click="rowform.$show()" title="แก้ใข"></i>
-									        </div>  
-								      	</td>
-									</tr>
-								</tbody>
-							</table>
-						</div>
-						
-						<button type="button" class="btn btn-primary btn-circle btn-sm" ng-click="addItem()"><i class="fa fa-plus-square"></i></button>
-					
-					</div>
-					
-                </div>
-                <div class="panel-footer"></div>
-            </div>
-        </div>
-    </div>
+
+	<div class="panel panel-primary">
+		<div class="panel-heading">
+			<i class="fa fa-list-alt fa-fw"></i> แสดง Action Code
+			<div class="btn-group pull-right" ng-if="authority == 'ROLE_SUPERADMIN'">
+				<button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
+					<i class="fa fa-chevron-down"></i>
+				</button>
+				<ul class="dropdown-menu slidedown">
+					<li ng-repeat="u in products"><a href="" ng-click="changeProduct(u)">{{ u.productName }}</a></li>
+				</ul>
+			</div>
+			<span class="pull-right">{{ product.productName }}&nbsp&nbsp</span>
+		</div>
+		<div class="panel-body" style="padding: 3px;">
+
+				<div class="table-responsive">
+					<table class="table table-striped table-hover">
+						<thead>
+							<tr style="color: #337AB7;">
+								<th style="width: 15%;">ตัวย่อ</th>
+								<th style="width: 30%;">ประโยคเต็ม</th>
+								<th style="width: 30%;">ความหมาย</th>
+								<th style="width: 10%;">สถานะ</th>
+								<th style="width: 15%;"></th>
+							</tr>
+						<thead>
+						<tbody>
+							<tr ng-repeat="item in items" style="color: #337AB7;">
+								<td style="vertical-align: middle;"><span editable-text="item.code" e-name="code" e-form="rowform">{{ item.code }}</span></td>
+								<td style="vertical-align: middle;"><span editable-text="item.desc" e-name="desc" e-form="rowform">{{ item.desc }}</span></td>
+								<td style="vertical-align: middle;"><span editable-text="item.meaning" e-name="meaning" e-form="rowform">{{ item.meaning }}</span></td>
+								<td style="vertical-align: middle;"><span editable-radiolist="item.enabled" e-name="enabled" e-form="rowform" e-ng-options="s.value as s.text for s in statuses"> 
+									<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="item.enabled"></i> 
+									<i class="fa fa-minus-circle fa-lg user-status-disabled-icon" ng-hide="item.enabled"></i>
+								</span></td>
+								<td style="vertical-align: middle;">
+									<form editable-form name="rowform" onbeforesave="saveItem($data, item, $index)" ng-show="rowform.$visible" class="form-buttons form-inline" shown="inserted == item">
+										<i class="fa fa-reply fa-lg user-action-icon-primary" ng-disabled="rowform.$waiting" ng-click="item.id != null ? rowform.$cancel() : cancelNewItem(item)" title="ยกเลิก"></i>&nbsp; 
+										<i class="fa fa-floppy-o fa-lg user-action-icon-primary" ng-disabled="rowform.$waiting" onclick="$(this.parentElement).submit()" title="บันทึก"></i>
+									</form>
+									<div class="buttons" ng-show="!rowform.$visible">
+										<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="removeItem($index, item.id)" title="ลบ"></i>&nbsp; 
+										<i class="fa fa-pencil-square-o fa-lg user-action-icon-primary" ng-click="rowform.$show()" title="แก้ใข"></i>
+									</div>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+
+				<div class="pull-right">
+					<button type="button" class="btn btn-primary btn-circle btn-sm" ng-click="addItem()">
+						<i class="fa fa-plus-square"></i>
+					</button>
+				</div>
+
+		</div>
+		<div class="panel-footer"></div>
+	</div>
 </div>
