--- a/backend/src/main/webapp/app/views/notice/main.html
+++ b/backend/src/main/webapp/app/views/notice/main.html
@@ -9,7 +9,7 @@
         <div class="col-lg-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                    <i class="fa fa-list-alt  fa-fw"></i> แสดงข้อมูลการนำเข้า&nbsp;
+                    <i class="fa fa-list-alt  fa-fw"></i> แสดงแบบฟอร์ม Notice&nbsp;
                     <div class="btn-group pull-right" ng-if="authority == 'ROLE_SUPERADMIN'">
 			            <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
 			            	<i class="fa fa-chevron-down"></i>
