--- a/backend/src/main/webapp/app/views/product/search.html
+++ b/backend/src/main/webapp/app/views/product/search.html
@@ -1,29 +1,25 @@
 
-<div class="col-lg-12">
-	<div class="well well-sm" style="background-color:rgba(51, 122, 183, 0.1);">
+<div class="panel panel-info" style="margin: 0;">
+	<div class="panel-heading">
 		<form class="form-inline" ng-submit="search()">
-		  <div class="form-group input-group">
-		    <span class="input-group-addon"><i class="fa fa-search"></i></span>
-		    <input type="text" class="form-control" placeholder="ชื่อโปรดักส์" ng-model="$parent.formData.productName">
-		  </div>
-		  <div class="form-group">
-                <label style="margin-left: 20px;">{{'user.addpage.status' | translate}} &nbsp;&nbsp;</label>
-                <label class="radio-inline">
-                    <input type="radio" name="userStatus" value="1" ng-model="$parent.formData.enabled">{{'user.addpage.status.enable' | translate}}
-                </label>
-                <label class="radio-inline">
-                    <input type="radio" name="userStatus" value="0" ng-model="$parent.formData.enabled">{{'user.addpage.status.disable' | translate}}
-                </label>
-		   </div>
-		   <button style="margin-left: 20px;" type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">{{'user.search.clear_btn' | translate}}</button>
-		   <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
+			<div class="form-group input-group">
+				<span class="input-group-addon"><i class="fa fa-search"></i></span> 
+				<input type="text" class="form-control" placeholder="ชื่อโปรดักส์" ng-model="$parent.formData.productName">
+			</div>
+			<div class="form-group">
+				<label style="margin-left: 20px;">{{'user.addpage.status' | translate}} &nbsp;&nbsp;</label> 
+				<label class="radio-inline"> <input type="radio" name="userStatus" value="1"
+					ng-model="$parent.formData.enabled">{{'user.addpage.status.enable' | translate}}
+				</label> 
+				<label class="radio-inline"> <input type="radio" name="userStatus" value="0" ng-model="$parent.formData.enabled">{{'user.addpage.status.disable' | translate}}</label>
+			</div>
+			<button style="margin-left: 20px;" type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">{{'user.search.clear_btn' | translate}}</button>
+			<button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
 		</form>
 	</div>
-</div>
 
-<div class="col-lg-12">
-	<div class="form-group input-group well well-sm" style="padding-top: 3px; padding-bottom: 3px;">
-		<span class="input-group-addon" style="border: 0px; background: none;">
+	<div class="alert alert-info form-group input-group" style="padding-top: 3px; padding-bottom: 3px; margin: 3px;">
+		<span class="input-group-addon" style="border: 0px; background: none; color: #337AB7;">
 			{{'pagination.page' | translate}}: {{formData.currentPage}} {{'pagination.of' | translate}} {{numPages}} ({{'pagination.total' | translate}} {{ totalItems }} {{'pagination.items' | translate}})
 		</span>
 		<pagination ng-change="pageChanged()" total-items="totalItems"
@@ -34,41 +30,39 @@
 					ng-model="$parent.formData.currentPage" items-per-page="itemsPerPage"
 					max-size="maxSize" class="pagination-sm pull-right" boundary-links="true"
 					rotate="false" num-pages="numPages" style="margin: auto;" />
-		<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none;">
+		<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none; color: #337AB7;">
 			<select style="height: 28px;" ng-options="option for option in [5,10,20,30,40,50,100] track by option" ng-model="$parent.itemsPerPage" ng-change="changeItemPerPage()"></select>&nbsp;{{'pagination.per_page' | translate}}								
 		</span>
 	</div>
 </div>
 	
-<div class="col-lg-12">	
-	<div class="table-responsive">	
-		<table class="table table-striped table-hover">
-			<thead>
-				<tr>
-					<th>#</th>
-					<th>ชื่อโปรดักส์</th>
-					<th>{{'user.table.header.status' | translate}}</th>
-					<th>{{'user.table.header.created_date' | translate}}</th>
-					<th></th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr ng-repeat="u in data.products track by $index">
-					<td>{{ $index + 1 + ((formData.currentPage - 1) * itemsPerPage) }}</td>
-					<td>{{ u.productName }}</td>
-					<td>
-						<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="u.enabled"></i>
-						<i class="fa  fa-minus-circle fa-lg user-status-disabled-icon" ng-hide="u.enabled"></i>
-					</td>
-					<td>{{ u.createdDateTime | date : 'dd-MM-yyyy hh:mm:ss'}}</td>
-					<td>
-						<i class="fa fa-times fa-lg user-action-icon-danger" title="ลบข้อมูล" ng-click="deleteUser(u.id)" ng-if="authority == 'ROLE_SUPERADMIN'"></i>&emsp;
-						<i class="fa fa-edit fa-lg user-action-icon-primary" title="แก้ใขข้อมูล" ng-click="editUser(u)"></i>&emsp;
-						<i class="fa fa-desktop fa-lg user-action-icon-primary" title="ตั้งค่าการแสดงผลข้อมูล" ng-click="importTaskSetting(u.id, u.productName)"></i>&emsp;
-						<i class="fa fa-database fa-lg user-action-icon-primary" title="ตั้งค่าฐานข้อมูล" ng-click="databaseSetting(u)" ng-if="authority == 'ROLE_SUPERADMIN'"></i>
-					</td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
+<div class="table-responsive">	
+	<table class="table table-striped table-hover" style="margin: 0;">
+		<thead>
+			<tr style="color: #337AB7;">
+				<th>#</th>
+				<th>ชื่อโปรดักส์</th>
+				<th>{{'user.table.header.status' | translate}}</th>
+				<th>{{'user.table.header.created_date' | translate}}</th>
+				<th></th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr ng-repeat="u in data.products track by $index" style="color: #337AB7;">
+				<td>{{ $index + 1 + ((formData.currentPage - 1) * itemsPerPage) }}</td>
+				<td>{{ u.productName }}</td>
+				<td>
+					<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="u.enabled"></i>
+					<i class="fa  fa-minus-circle fa-lg user-status-disabled-icon" ng-hide="u.enabled"></i>
+				</td>
+				<td>{{ u.createdDateTime | date : 'dd-MM-yyyy hh:mm:ss'}}</td>
+				<td>
+					<i class="fa fa-times fa-lg user-action-icon-danger" title="ลบข้อมูล" ng-click="deleteUser(u.id)" ng-if="authority == 'ROLE_SUPERADMIN'"></i>&emsp;
+					<i class="fa fa-edit fa-lg user-action-icon-primary" title="แก้ใขข้อมูล" ng-click="editUser(u)"></i>&emsp;
+					<i class="fa fa-desktop fa-lg user-action-icon-primary" title="ตั้งค่าการแสดงผลข้อมูล" ng-click="importTaskSetting(u.id, u.productName)"></i>&emsp;
+					<i class="fa fa-database fa-lg user-action-icon-primary" title="ตั้งค่าฐานข้อมูล" ng-click="databaseSetting(u)" ng-if="authority == 'ROLE_SUPERADMIN'"></i>
+				</td>
+			</tr>
+		</tbody>
+	</table>
 </div>
