--- a/backend/src/main/webapp/app/views/result_code/main.html
+++ b/backend/src/main/webapp/app/views/result_code/main.html
@@ -11,11 +11,9 @@
 		</div>
 	</div>
 	
-    <div class="row">
-        <div class="col-lg-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                    <i class="fa fa-users fa-fw"></i> ตั้งค่า Result Code
+                    <i class="fa fa-list-alt fa-fw"></i> แสดง Result Code
                     <div class="btn-group pull-right" ng-if="authority == 'ROLE_SUPERADMIN'">
 			            <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
 			            	<i class="fa fa-chevron-down"></i>
@@ -28,14 +26,13 @@
 			        </div>
 			        <span class="pull-right">{{ product.productName }}&nbsp&nbsp</span>
                 </div>
-                <div class="panel-body">
+                <div class="panel-body" style="padding: 3px;">
                 
                 
-                	<div class="col-lg-12">
                 		<div class="table-responsive">	
 							<table class="table table-striped table-hover">
 								<thead>
-									<tr>
+									<tr style="color: #337AB7;">
 										<th style="width: 9%;">ตัวย่อ</th>
 										<th style="width: 28%;">ประโยคเต็ม</th>
 										<th style="width: 28%;">ความหมาย</th>
@@ -45,7 +42,7 @@
 									</tr>
 								<thead>
 								<tbody>
-									<tr ng-repeat="item in items">
+									<tr ng-repeat="item in items" style="color: #337AB7;">
 										<td style="vertical-align: middle;">
 									        <span editable-text="item.code" e-name="code" e-form="rowform">{{ item.code }}</span>
 								      	</td>
@@ -81,15 +78,14 @@
 							</table>
 						</div>
 						
-						<button type="button" class="btn btn-primary btn-circle btn-sm" ng-click="resultCodeGroupModal()"><i class="fa fa-cubes"></i></button>
-						<button type="button" class="btn btn-primary btn-circle btn-sm" ng-click="addItem()"><i class="fa fa-plus-square"></i></button>
+						<div class="pull-right">
+							<button type="button" class="btn btn-primary btn-circle btn-sm" ng-click="resultCodeGroupModal()"><i class="fa fa-cubes"></i></button>
+							<button type="button" class="btn btn-primary btn-circle btn-sm" ng-click="addItem()"><i class="fa fa-plus-square"></i></button>
+						</div>
 					
-					</div>
                 </div>
                 <div class="panel-footer"></div>
             </div>
-        </div>
-    </div>
 </div>
 
 <!-- Modal -->
