--- a/backend/src/main/webapp/app/views/home/main.html
+++ b/backend/src/main/webapp/app/views/home/main.html
@@ -9,11 +9,31 @@
         <div class="col-lg-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                    <i class="fa fa-user fa-fw"></i> Home
+                    <i class="fa fa-home fa-fw"></i> Home
                 </div>
                 <div class="panel-body">
 					
-					<p ng-repeat="u in products track by $index">{{ u.productName }}</p>
+					<div class="row">
+						<div class="col-lg-4 col-lg-offset-4">
+							<div style="text-align: center; margin-bottom: 15px;">
+								<img id="photo" class="img-thumbnail" ng-src="{{ photoSource }}" ng-show="photoSource"style="height: 130px;">
+							</div>
+							
+			                    <div class="well well-sm">
+			                        <div class="form-horizontal">
+				                        <div class="form-group">
+											<label class="col-lg-4 control-label">ชื่อ</label>
+											<span class="form-control" style="color: #337AB7;">{{ title }} {{ firstName }} {{ lastName }}</span>
+										</div>
+				                        <div class="form-group">
+											<label class="col-lg-4 control-label">เบอร์โทร</label>
+											<span class="form-control" style="color: #337AB7;">{{ phoneNumber }}</span>
+										</div>
+			                        </div>
+			                    </div>
+							
+						</div>
+					</div>
 					
                 </div>
                 <div class="panel-footer"></div>
