--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -2,7 +2,7 @@
 <div class="row">
 	<div class="col-lg-12">
 		<div class="btn-group pull-left" style="margin: 0 0 3px 0;">
-		  <button type="button" class="btn btn-info btn-outline" ng-class="{'active': group.btnActive}" ng-repeat="group in groupDatas" ng-click="changeTab(group)">{{ group.name }}</button>
+		  <button type="button" class="btn btn-default btn-outline" ng-class="{'active': group.btnActive}" ng-repeat="group in groupDatas" ng-click="changeTab(group)">{{ group.name }}</button>
 		</div>
 	</div>
 
@@ -28,7 +28,7 @@
 <div class="row">
 	<div class="col-lg-12">
 		<div class="btn-group" style="margin: 3px 0 3px 0;">
-		  <button type="button" class="btn btn-info btn-outline" ng-class="{'active': menu.btnActive}" ng-repeat="menu in tabActionMenus" ng-click="changeTabAction(menu)">{{ menu.name }}</button>
+		  <button type="button" class="btn btn-default btn-outline" ng-class="{'active': menu.btnActive}" ng-repeat="menu in tabActionMenus" ng-click="changeTabAction(menu)">{{ menu.name }}</button>
 		</div>
 	</div>
 	<div class="col-lg-12" style="min-height: 150px;" ng-include="lastTabActionMenuActive.url"></div>
