--- a/backend/src/main/webapp/app/views/working/tab_trace.html
+++ b/backend/src/main/webapp/app/views/working/tab_trace.html
@@ -37,7 +37,7 @@
 			</tr>
 		<thead>
 		<tbody>
-			<tr ng-repeat="data in askModalObj.init.traceData.traceWorks track by $index" style="cursor: pointer; color: #337AB7;" ng-click="askModal(data)">
+			<tr ng-repeat="data in askModalObj.init.traceData.traceWorks track by $index" ng-style="isEditable ? {'cursor': 'pointer'} : {}" style="color: #337AB7;" ng-click="isEditable ? askModal(data) : ''">
 				<td style="text-align: center;">{{ $index + 1 + ((askModalObj.init.currentPage - 1) * askModalObj.init.itemsPerPage) }}</td>
 				<td style="text-align: center;">{{ data.createdDateTime | date : 'dd-MM-yyyy hh:mm:ss' }}</td>
 				<td>{{ data.resultText }}</td>
@@ -49,7 +49,7 @@
 				<td style="text-align: center;">{{ data.resultCodeText }}</td>
 				<td>{{ data.createdByText }}</td>
 				<td ng-click="askModalObj.deleteTraceDummy($event)" style="cursor: default; text-align: center;">
-					<i class="fa fa-times fa-lg user-action-icon-danger" title="ลบ" ng-click="askModalObj.deleteTrace($event, data.id)"></i>
+					<i class="fa fa-times fa-lg user-action-icon-danger" title="ลบ" ng-click="askModalObj.deleteTrace($event, data.id)" ng-show="isEditable"></i>
 				</td>
 			</tr>
 		</tbody>
